# rust_nginx

./: Cargo.toml  build.rs  rnginx_conf.json  rnginx_conf.toml  rnginx_conf.yaml
documents/: 整体目标.md
src/: args.rs  error.rs  main.rs  resource_resolver.rs  router.rs  server.rs  shell.rs
src/config/: common_config.rs  config_structs.rs  mod.rs  server_config.rs
src/config_parser/: mod.rs
src/lua/: lua_env.rs  mod.rs
src/proxy_server/: mod.rs  proxy_server.rs
src/worker/: mod.rs  server_worker.rs
