[package]
name = "rust_nginx"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimalloc = { version = "0.1.26", default-features = false }
tokio = { version = "1.9.0", features = ["full"] }
hyper = { version = "0.14.11",features=["full"] }
serde = { version = "1.0.127",features=["derive"] }
toml = { version = "0.5.8" }
pretty_env_logger = { version = "0.4.0" }
log = "0.4"
mlua = { version = "0.6.2",features=["vendored","luajit"] }
